# POTPyRI

./: .buildinfo  .coverage  .gitignore  Astroquery.ipynb  BINOSPEC_pipeline.py  CONTRIBUTING.md  Create_stacks.py  Crop_extension.py  DEIMOS_pipeline.py  Find_target_phot.py  Find_target_phot_new.py  Find_tile.py  Find_zero_point.py  Find_zero_point_old.py  GMOS_pipeline.py  Gaussians.py  HISTORY_TRIM.md  LRIS_pipeline.py  MMIRS_pipeline.py  MOSFIRE_pipeline.py  README.md  Sort_files.py  UKIRT_Driver.py  Vizier_catalogs.py  absphot.py  align.py  align_quads.py  catreg.py  create_mask.py  custom_logger.py  dvMMIRS.py  dvSort_files.py  environment.yml  extinction.py  gemini_download_script.py  genindex.html  index.html  installation.html  keck_download_script.py  main_pipeline.py  (+16 more)
.github/workflows/: build-test.yml  documentation.yml  draft-pdf.yml  pages.yml  publish.yml
.ipynb_checkpoints/: Astroquery-checkpoint.ipynb
Config/: config  params
_modules/: index.html
_modules/potpyri/instruments/: BINOSPEC.html  DEIMOS.html  F2.html  FOURSTAR.html  GMOS.html  IMACS.html  LRIS.html  MMIRS.html  MOSFIRE.html  instrument.html
_modules/potpyri/primitives/: absphot.html  calibration.html  image_procs.html  photometry.html  solve_wcs.html  sort_files.html
_modules/potpyri/scripts/: main_pipeline.html
_modules/potpyri/utils/: logger.html  options.html  utilities.html
_sources/: index.rst.txt  installation.rst.txt
_sources/api/: instruments.rst.txt  primitives.rst.txt  scripts.rst.txt
_static/: pygments.css
api/: index.html  instruments.html  primitives.html  scripts.html  utils.html
calibrations/MMIRS_calib/: compress_files.py  pixflat_H.fits.fz  pixflat_J.fits.fz  pixflat_K.fits.fz  pixflat_Y.fits.fz
docs/: DEPLOY.md
docs/source/: conf.py  custom.css  index.rst  installation.rst
docs/source/api/: index.rst  primitives.rst  utils.rst
environment/: pipeline_environment_macosx.yml
paper/: paper.bib  paper.md
params/: DEIMOS.py  MMIRS.py
potpyri/: Find_target_phot.py  Gaussians.py  Sort_files.py  __init__.py  _version.py  absphot.py  align_quads.py  calibration.py  catreg.py  create_mask.py  image_procs.py  logger.py  main_pipeline.py  options.py  photometry.py  psf.py  quality_check.py  solve_wcs.py  sort_files.py  utilities.py
potpyri/archives/: download_anet_index.py  download_keck_data.py
potpyri/config/: params
potpyri/data/config/: config
potpyri/data/staticmasks/: GMOS-N.12.22.staticmask.fits.fz  GMOS-N.nccd3.staticmask.fits.fz  GMOS-S.nccd3.staticmask.fits.fz  bino_left.staticmask.fits.fz  bino_proc_left.staticmask.fits.fz  bino_proc_left.trim.staticmask.fits.fz  bino_proc_right.staticmask.fits.fz  binospec.staticmask.fits.fz  f2.staticmask.fits.fz  gmos-s.staticmask.fits.fz  lris.blue.test.11.staticmask.fits.fz  lris.red.staticmask.fits.fz  mosfire.11.staticmask.fits.fz  mosfire.staticmask.fits.fz
potpyri/instruments/: BINOSPEC.py  DEIMOS.py  F2.py  FOURSTAR.py  FourStar.py  GMOS.py  IMACS.py  LRIS.py  MMIRS.py  MOSFIRE.py  __init__.py  instrument.py
potpyri/params/: BINOSPEC.py  GMOS.py  LRIS.py  MMIRS.py  MOSFIRE.py
potpyri/pipelines/: __init__.py  context.py  imaging_reduction.py  stages.py
potpyri/primitives/: __init__.py  absphot.py  base_primitive.py  calibration.py  image_procs.py  photometry.py  solve_wcs.py  sort_files.py
potpyri/primitives/absphot/: __init__.py  primitive.py  zeropoint.py
potpyri/primitives/astrometry/: __init__.py  astrometry_net_primitive.py  wcs_solution.py
potpyri/primitives/calibration/: __init__.py  bias.py  dark.py  flat.py
potpyri/primitives/image_procs/: __init__.py  satellites.py  stack_ops.py  worker.py
potpyri/primitives/photometry/: __init__.py  core.py  photometry_loop.py
potpyri/primitives/solve_wcs/: __init__.py  core.py  primitive.py
potpyri/primitives/sort_files/: handle_files_fn.py  primitive.py
potpyri/primitives/sorting/: __init__.py  collect_file_table.py  collect_file_table_worker.py  header_classification.py  raw_file_table.py  sorting_primitive.py
potpyri/primitives/stacking/: __init__.py  align_reproject.py  combine_and_detrend.py  field_geometry.py  mask_and_error.py  stacking_pipeline_worker.py  stacking_primitive.py
potpyri/primitives/zeropoint/: __init__.py  catalog_zeropoint.py  zeropoint_primitive.py
potpyri/scripts/: __init__.py  main_pipeline.py
potpyri/scripts/archives/: __init__.py  download_anet_index.py  download_gemini_data.py  download_keck_data.py
potpyri/stages/: __init__.py  absphot.py  calibration.py  image_procs.py  photometry.py  solve_wcs.py  sort_files.py
potpyri/utilities/: Vizier_catalogs.py  getSPITZERcat.py  metacheck.py  metaquery.py  mkFinderChart.py  util.py
potpyri/utils/: __init__.py  catalogs.py  logger.py  options.py  utilities.py
scripts/: trim_history.sh
specpipe/extra_files/: disp.cl
specpipe/spectral_reduction/: QUICKLOOK.py  arc_id_helper.py  cal.py  combine_sides.py  cosmics.py  cosmo.py  flat_utils.py  headerfix.py  host_galaxies.py  instruments.py  keck_basic_2d.py  keck_prep.py  manifest_utils.py  overscan_trim_flatfield.py  pre_reduction.py  pre_reduction_dev.py  pyzapspec.py  quick_reduc.py  util.py  wombat.py
specpipe/test_data/kast/: b1003.fits  b1020.fits  b1021.fits  (+25 more)
staticmasks/: MMIRS.staticmask.fits  MMIRS.staticmask.fits.fz  bino_proc_right.trim.staticmask.fits.fz
tel_params/: BINOSPEC.py  DEIMOS.py  GMOS.py  LRIS.py  MMIRS.py  MOSFIRE.py
tests/: __init__.py  test_absphot.py  test_background_subtraction.py  test_binspec_frb_stack_photometry.py  test_calibration.py  test_error.py  test_image_procs.py  test_init.py  test_instruments.py  test_main_pipeline_photometry.py  test_options.py  test_photometry.py  test_photometry_regressions.py  test_sort.py  test_source_extractor.py  test_stack.py  test_staticmask.py  test_utilities.py  test_wcs.py  utils.py
utilities/: absphot.py  getPS1DR2.py  getSKYMAPPERcat.py  gsaoi.py  shibboleth.py  spitzer.py  util.py
(+218 files in other folders)
