# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
requires = ["setuptools>=38.3.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "potpyri/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"


[project]
name = "potpyri"
dynamic = ["version"]
description = "Data reduction pipeline for imaging from large aperture telescopes."
readme = "README.md"
requires-python = ">=3.11.0"
license = {file = "LICENSE.txt"}

authors = [
  {name = "Kerry Paterson", email = "paterson@mpia.de" },
  {name = "Owen Eskandari", email = "oeskandari@wisc.edu" },
  {name = "Charlie Kilpatrick", email = "ckilpatrick@northwestern.edu" }
]

maintainers = [
  {name = "Charlie Kilpatrick", email = "ckilpatrick@northwestern.edu" }
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Topic :: Scientific/Engineering :: Astronomy",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "acstools",
    "astropy",
    "astroquery",
    "beautifulsoup4",
    "ccdproc",
    "gdown",
    "matplotlib",
    "numpy",
    "photutils",
    "progressbar",
    "pykoa",
    "requests",
    "scipy"
]

[tool.conda-lock.dependencies]
astrometry = ">=0.1"
astromatic-source-extractor = ">=1.0"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "requests"]
docs = ["sphinx==8.1.3", "nbsphinx", "sphinx-astropy", "pandoc", "sphinx-multiversion", "sphinxawesome-theme"]

[project.urls]
"Documentation" = "https://CIERA-Transients.github.io/POTPyRI/"
"Source" = "https://github.com/CIERA-Transients/POTPyRI"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["potpyri*"]
namespaces = false

[tool.setuptools.package-data]
potpyri = ["data/staticmasks/*.fz", "data/cal/*/*.fz"]

[project.scripts]
main_pipeline = "potpyri.scripts.main_pipeline:main"
download_anet_index = "potpyri.scripts.archives.download_anet_index:main"
download_keck_data = "potpyri.scripts.archives.download_keck_data:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
