# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
requires = ["setuptools>=38.3.0", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "potpyri/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
# Use when building from sdist or outside git (e.g. CI, Linux package managers)
fallback_version = "0.0.1"


[project]
name = "potpyri"
dynamic = ["version"]
description = "Data reduction pipeline for imaging from large aperture telescopes."
readme = "README.md"
requires-python = ">=3.11.0"
license = "MIT"
license-files = ["LICENSE.txt"]

authors = [
  {name = "Kerry Paterson", email = "paterson@mpia.de" },
  {name = "Owen Eskandari", email = "oeskandari@wisc.edu" },
  {name = "Charlie Kilpatrick", email = "ckilpatrick@northwestern.edu" }
]

maintainers = [
  {name = "Charlie Kilpatrick", email = "ckilpatrick@northwestern.edu" }
]

classifiers = [
  "Development Status :: 1 - Planning",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "acstools>=3.0",
    "astropy>=6.0",
    "astroquery>=0.4",
    "beautifulsoup4>=4.9",
    "ccdproc>=2.4",
    "gdown>=4.0",
    "matplotlib>=3.5",
    "numpy>=1.24",
    "photutils>=1.9",
    "progressbar>=2.5",
    "pykoa>=1.0",
    "requests>=2.25",
    "scipy>=1.10"
]

[tool.conda-lock.dependencies]
astrometry = ">=0.1"
astromatic-source-extractor = ">=1.0"

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov>=4"]
docs = ["sphinx==8.1.3", "nbsphinx", "sphinx-astropy", "pandoc", "sphinx-multiversion", "sphinxawesome-theme"]

[project.urls]
"Documentation" = "https://CIERA-Transients.github.io/POTPyRI/"
"Source" = "https://github.com/CIERA-Transients/POTPyRI"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["potpyri*"]
namespaces = false
# Exclude data dirs (staticmasks, cal) so they are only package-data, not Python packages
exclude = ["potpyri.data*"]

[tool.setuptools.package-data]
potpyri = ["data/staticmasks/*.fz", "data/cal/*/*.fz"]

[project.scripts]
main_pipeline = "potpyri.scripts.main_pipeline:main"
download_anet_index = "potpyri.scripts.archives.download_anet_index:main"
download_keck_data = "potpyri.scripts.archives.download_keck_data:main"
download_gemini_data = "potpyri.scripts.archives.download_gemini_data:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require network/external services (deselect with '-m \"not integration\"')",
]
filterwarnings = [
    "ignore:.*scipy.odr.*deprecated:DeprecationWarning",
    "ignore:Units from inserted quantities will be ignored:UserWarning",
    "ignore:The EPSFModel class is deprecated:DeprecationWarning",
    "ignore:The fit may be unsuccessful:UserWarning",
]
